--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
 h5py==2.10.0
-ipython
-keras==2.1.6
+imgaug==0.4.0
+Keras==2.1.6
 lmfit==1.0.3
-matplotlib==3.5.1
-numpy==1.21.5
+matplotlib==3.5.2
+numpy==1.21.6
 pandas==1.3.5
 Pillow==9.2.0
-pims==0.6.1
+PIMS==0.6.1
 plotly==5.6.0
+pymicro==0.5.1
+PyQt5==5.15.7
 pystackreg==0.2.6
 scikit_image==0.19.2
 scipy==1.7.3
@@ -15,5 +17,4 @@ seaborn==0.11.2
 silence_tensorflow==1.2.0
 tensorflow==1.15.0
 trackpy==0.5.0
-opencv-python
-protobuf==3.20.*
+vtk
